--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,12 +13,12 @@
             "preLaunchTask": "C/C++: gcc.exe build active file"
         },
         {
-            "name": "padegen",
+            "name": "datagen",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\pade.out",
+            "program": "${fileDirname}\\datagen.out",
             "cwd": "${fileDirname}",
-            "preLaunchTask": "pade"
+            "preLaunchTask": "datagen"
         }
     ]
 }
